# rihla

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.json
examples/queries/: canonical.json  europe-only.json  raw-iata.json
packaging/rihla-mcp/: NOTICE  README.md  pyproject.toml
scripts/: probe_coverage.py
src/rihla/: __init__.py  api.py  cli.py  config.py  core.py  mcp_server.py  places.py  resolve.py
src/rihla/fetchers/: __init__.py  _http.py  amadeus.py  base.py  cache.py  merge.py  mock.py  serpapi.py  travelpayouts.py
tests/: test_cache.py  test_core_merge.py  test_query_api.py  test_resolve.py
