[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rihla"
version = "0.1.0"
description = "Flexible multi-leg, multi-airport flight search that finds the cheapest route across an entire itinerary."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Leandro Garcia" }]
keywords = ["flights", "flight-search", "travel", "itinerary", "mcp", "mcp-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
]
dependencies = [
    "python-dotenv",  # load credentials from a local .env in the CLI
]
# Live fetchers (Travelpayouts, SerpApi) use stdlib urllib - no extra runtime deps yet.
# httpx joins at the MCP milestone (M5) for async/concurrent fetching.

[project.urls]
Homepage = "https://github.com/leojg/rihla"
Repository = "https://github.com/leojg/rihla"
Issues = "https://github.com/leojg/rihla/issues"
Changelog = "https://github.com/leojg/rihla/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# MCP server: pip install "rihla[mcp]"
mcp = ["mcp>=1.0"]
# Tooling for local development: pip install -e ".[dev]"
dev = ["pytest", "ruff"]

[project.scripts]
rihla = "rihla.cli:main"
rihla-mcp = "rihla.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
